# UW

./: .gitignore  README.md
Data_and_Knowledge_Modelling_and_Analysis/Assignment1/: Assignment_1.ipynb
Data_and_Knowledge_Modelling_and_Analysis/Assignment2/: Assignment 2 part 2.ipynb
Data_and_Knowledge_Modelling_and_Analysis/HW1/: ECE657A HW1 Juan M Gomez Gonzalez.ipynb
Data_and_Knowledge_Modelling_and_Analysis/Sentiment_Analysis_Project/: 1_ECE657A_Project_G12_ML.ipynb  2_ECE 657A_Project_G12_MLP.ipynb  3_ECE 657A_Project_G12_LSTM.ipynb  4_ECE 657A_Project_G12_LSTM_Paper.ipynb  5_ECE 657A_Project_G12_CNN_Paper.ipynb  README.md  README.txt  requirements.txt
Database_Systems/Assignment2/: graph.cpp  graph.hpp
Database_Systems/Assignment3/: ece650-a2.cpp  parser.hpp  street.cpp
Database_Systems/Assignment_1/: ECE 656 Assignment 1.txt  ECE656AssignmentPart1.sql  ECE656AssignmentPart2.sql
Database_Systems/Assignment_2/: Assignment_2_Queries.sql  Assignment_2_Queries_Part1.sql  Assignment_2_Queries_Part2.sql  Assignment_2_SQL.sql  Classroom_Table.sql  Course_Table.sql  Department_Table.sql  Instructor_Table.sql  Offering_Table.sql  Prereq_Table.sql
Database_Systems/HallOfFame_NB_Classifier/: ECE656_Project.py  ECE656_Project_Final.ipynb  Procedures.sql  README.md  README.txt  requirements.txt
Database_Systems/SQL_Project/: ECE656_Project.py  (+3 more)
ECE608/: Assignment4
ECE650/Assignment3/: CMakeLists.txt  a1run_test.cpp  driver.cpp  driverTest.cpp  ece650-a1.py  ece650-a2.cpp  ece650-a3.cpp  graph.cpp  graph.hpp  parser.cpp  rgen.cpp  street.cpp  street.hpp
(+87 files in other folders)
